<?xml version="1.0"?>
<package>
  <name>gps_agent_pkg</name>
  <version>0.0.0</version>
  <description>The gps_agent_pkg catkinized package</description>

  <maintainer email="ogunmolu@amazon.com">Olalekan Ogunmolu</maintainer>

  <license>BSD</license>

  <author email="cbfinn@eecs.berkeley.edu">Chelsea Finn</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <rosdep name="eigen" />
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>